<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="220dp"
    android:layout_height="260dp"
    android:background="@drawable/bg_right_menu_rounded"
    android:orientation="vertical"
    android:paddingVertical="8dp">

    <LinearLayout
        android:id="@+id/layoutDetailMenuRename"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/edit"
            app:tint="@color/lumina_text_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/rename"
            android:textColor="@color/lumina_text_title"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutDetailMenuWallpaper"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/photo"
            app:tint="@color/lumina_text_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/set_as_wallpaper"
            android:textColor="@color/lumina_text_title"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutDetailMenuCopy"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/copy"
            app:tint="@color/lumina_text_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/copy"
            android:textColor="@color/lumina_text_title"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutDetailMenuOpenWith"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/share"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/open_with"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutDetailMenuMovetoVault"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/lock"
            app:tint="@color/lumina_text_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/move_to_vault"
            android:textColor="@color/lumina_text_title"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
